kill run sum for processing event state
